2009-08-12

	* src/import.c: removed 'eml (file)'. Update description label.

2009-08-11

	* libsylph/mbox.c
	  src/export.[ch]: show progress bar on export.
	* src/mainwindow.c
	  src/import.c: modified menu label and function names.

2009-08-11

	* src/import.c: implemented eml file import (with folder).

2009-08-10

	* src/import.c: added eml file import (one file).

2009-08-10

	* src/import.c: added format selection menu, and refactored the code.

2009-08-10

	* libsylph/procmime.c: procmime_scan_content_type_str():
	  remove comments from Content-Type charset parameter.

2009-08-05

	* src/plugin.c: syl_plugin_load_all(): don't output warning when
	  failed to open directory.

2009-08-05

	* src/import.c: modified progressbar dialog.

2009-08-04

	* sylpheed.spec.in: fixed %files section.

2009-08-04

	* libsylph/mbox.c
	  src/progressdialog.[ch]
	  src/import.c: show progressbar on mbox import.

2009-07-21

	* version 2.7.0

2009-07-01

	* PLUGIN.txt
	  PLUGIN.ja.txt: added plugin document.

2009-07-01

	* plugin/test/Makefile.am: fixed build issue.

2009-06-25

	* updated COPYING and LICENSE.

2009-06-25

	* manual/ja/sylpheed.sgml: updated bsfilter description.

2009-06-17

	* src/plugin.[ch]
	  src/main.c
	  src/libsylpheed-plugin-0.def: made syl_plugin_lookup_symbol()
	  public. Added syl_plugin_main_window_get_statusbar().

2009-06-12

	* plugin/test/Makefile.am: do not install automatically (added make
	  install-plugin target).

2009-06-12

	* manual/ja/sylpheed.sgml: updated for 2.7.

2009-06-10

	* merged plugin-test branch into trunk.

2009-06-08

	* libsylph/procmsg.c
	  libsylph/procheader.c: made perror() more descriptive.

2009-06-03

	* src/plugin.[ch]
	  src/main.c: syl_plugin_manage_window_get_focus_window(): added.

2009-05-28

	* src/folderview.c: folderview_new_folder_cb(): win32: don't allow
	  filesystem-unsafe characters.

2009-05-27

	* configure.in
	  src/update_check.c: added config.h macro DEVEL_VERSION.

2009-05-27
