@@ -1,5 +1,10 @@
 2009-08-12
 
+	* libsylph/mh.c: mh_do_move_msgs(): emit remove-msg signal after
+	  add-msg for speedup.
+
+2009-08-12
+
 	* src/import.c: removed 'eml (file)'. Update description label.
 
 2009-08-11
